ingress-role.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress  
spec:
  rules:
  - host: nginx1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: nginx1-service
           port:
            number: 80
